--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
 	<body>
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link" id="v-pills-recent-tab" data-bs-toggle="pill" href="#v-pills-recent" role="tab" aria-controls="v-pills-recent" aria-selected="false">Recent</a>
             <a class="nav-link active" id="v-pills-faces-tab" data-bs-toggle="pill" href="#v-pills-faces" role="tab" aria-controls="v-pills-faces" aria-selected="true">Faces</a>
             <a class="nav-link" id="v-pills-hands-tab" data-bs-toggle="pill" href="#v-pills-hands" role="tab" aria-controls="v-pills-hands" aria-selected="false">Hands</a>
             <a class="nav-link" id="v-pills-animals-tab" data-bs-toggle="pill" href="#v-pills-animals" role="tab" aria-controls="v-pills-animals" aria-selected="false">Animals</a>
@@ -19,6 +20,8 @@
             <a class="nav-link" id="v-pills-misc-tab" data-bs-toggle="pill" href="#v-pills-misc" role="tab" aria-controls="v-pills-misc" aria-selected="false">Misc</a>
         </div>
         <div class="tab-content" id="v-pills-tabContent">
+        <div class="tab-pane fade show emoji" id="v-pills-recent" role="tabpanel" aria-labelledby="v-pills-recent-tab">
+        </div>
         <div class="tab-pane fade show active emoji" id="v-pills-faces" role="tabpanel" aria-labelledby="v-pills-faces-tab">
             <span onclick="handleEmojiClick(this)">&#128512;</span>
             <span onclick="handleEmojiClick(this)">&#128513;</span>
