Added button to allow unselect of all selected.  Added beginnings of feature to add recently used emojis to recent tab. Still need to add them to localStorage the list can be persisted over sessions.

--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
             <a class="nav-link" id="v-pills-animals-tab" data-bs-toggle="pill" href="#v-pills-animals" role="tab" aria-controls="v-pills-animals" aria-selected="false">Animals</a>
             <a class="nav-link" id="v-pills-food-tab" data-bs-toggle="pill" href="#v-pills-food" role="tab" aria-controls="v-pills-food" aria-selected="false">Food</a>
             <a class="nav-link" id="v-pills-misc-tab" data-bs-toggle="pill" href="#v-pills-misc" role="tab" aria-controls="v-pills-misc" aria-selected="false">Misc</a>
+            <button type="button" class="btn btn-warning" onclick="unselectAll()">Unselect All</button>
         </div>
         <div class="tab-content" id="v-pills-tabContent">
         <div class="tab-pane fade show emoji" id="v-pills-recent" role="tabpanel" aria-labelledby="v-pills-recent-tab">
