--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
 	</head>
-	<body>
+	<body onload="loadRecentsFromLocalStorage()">
     <div class="d-flex align-items-start">
         <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             <a class="nav-link" id="v-pills-recent-tab" data-bs-toggle="pill" href="#v-pills-recent" role="tab" aria-controls="v-pills-recent" aria-selected="false">Recent</a>
@@ -215,7 +215,7 @@
             <span onclick="handleEmojiClick(this)">&#129385;</span>
             <span onclick="handleEmojiClick(this)">&#129386;</span>
         </div>
-        <div class="tab-pane fade emoji" id="v-pills-misc" role="tabpanel" aria-labelledby="v-pills-misc-tab">...
+        <div class="tab-pane fade emoji" id="v-pills-misc" role="tabpanel" aria-labelledby="v-pills-misc-tab">
             <span onclick="handleEmojiClick(this)">&#128581;</span>
             <span onclick="handleEmojiClick(this)">&#128582;</span>
             <span onclick="handleEmojiClick(this)">&#128583;</span>
