--- a/index.htm
+++ b/index.htm
@@ -302,10 +302,19 @@
             <span onclick="handleEmojiClick(this)">&#129487;</span>
         </div>
         <div class="tab-pane fade emoji" id="v-pills-custom" role="tabpanel" aria-labelledby="v-pills-misc-custom">
+            <div id="success-alert" class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>Success!</strong> The emoji(s) were successfully saved.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>                
+            <div id="warn-alert" class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Warning!</strong> One ore more emoji(s) were note saved, because they've
+                been added previously.
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>                
             <div class="input-group mb-3">
                 <input id="customEmojiText"type="text" class="form-control" placeholder="Add emojis here" aria-label="Add emojis here" aria-describedby="saveCustomEmoji">
                 <button id="saveCustomEmoji" class="btn btn-outline-primary" type="button" >Save</button>
-              </div>
+            </div>
         </div>
         </div>
         </div>
