On mobile every time an item was selected and the offscreen text input was chosen, then the focus would get set offscreen.  It was ridiculous.  I've now just added a proper input text at the top and the user can see the items being added.  It's so annoying!

--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,7 @@
             </div>
 			</div>
 			<div class="tab-content" id="v-pills-tabContent">
+				<div><input class="form-control" id="emojiList" type="text"></div>
 				<div class="tab-pane fade emoji" id="recent-tab" role="tabpanel" aria-labelledby="recent-tab"></div>
 				<div class="tab-pane fade emoji show active" id="faces-tab" role="tabpanel" aria-labelledby="faces-tab">
 					<span>&#128512;</span>
@@ -314,7 +315,7 @@
 					</div>
 				</div>
 		  	</div>
+			  
 		</div>
-		<input id="emojiList" type="text">
 	</body>
 </html>
