Added thinking-face and removed click on HTML which is no longer needed and was causing a bug.

--- a/index.htm
+++ b/index.htm
@@ -39,6 +39,7 @@
 					<span>&#128519;</span>
 					<span>&#128520;</span>
 					<span>&#128521;</span>
+					<span>&#129300;</span>
 					<span>&#128522;</span>
 					<span>&#128523;</span>
 					<span>&#129392;</span>
